--- a/home.css
+++ b/home.css
@@ -13,10 +13,14 @@ h1, h3{
 }
 
 /* Navigation bar */
-.nav-bar{
-  background-color: #4c7397;
+header{
   position: sticky;
   top: 0;
+  z-index: 1;
+}
+
+.nav-bar{
+  background-color: #4c7397;
 }
 
 .nav-bar ul{
@@ -32,8 +36,7 @@ h1, h3{
 }
 
 .active1 a{
-  opacity: 0.7;
-  color: #db545a;
+  background-color: #2c405287;
 }
 
 .nav-bar li a {
@@ -44,10 +47,11 @@ h1, h3{
   color: white;
   font-family: 'Fjalla One', sans-serif;
   font-size: 18px;
+  transition: background-color 1s;
 }
 
 .nav-bar li a:hover{
-  color: #db545a;
+  background-color: #2c405287;
 }
 
 
