--- a/home.css
+++ b/home.css
@@ -21,6 +21,13 @@ header{
 
 .nav-bar{
   background-color: #4c7397;
+  position: relative;
+}
+
+.logo{
+  position: absolute;
+  top: 4px;
+  left: 1rem;
 }
 
 .nav-bar ul{
@@ -35,9 +42,6 @@ header{
   display: inline-block;
 }
 
-/* .active1 a{
-  background-color: #fff !important;
-} */
 
 .nav-bar li a {
   display: block;
@@ -54,6 +58,10 @@ header{
   background-color: #2c405287;
 }
 
+.icon{
+  color: aquamarine;
+  margin-right: 10px;
+}
 
 /* First page */
 .image-box{
@@ -396,6 +404,11 @@ header{
 
 .inha-emblem{
   position: relative;
+}
+
+.footer-text{
+  text-align: center;
+  margin-left: 5rem;
 }
 
 .inha-link{
